<resources>
    <string name="app_name">NewsApp40</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="todo">TODO</string>
    <string name="news">Введите новость</string>
    <string name="save">Save</string>
    <string name="text">Text: </string>
    <string name="date">date</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="get_started">Get started</string>
    <string name="skip">Skip</string>
    <string name="clean_cash">Clean cash</string>
    <string name="name">Name</string>
    <string name="username">username</string>
    <string name="check">Check</string>
    <string name="address">Address</string>
    <string name="password">password</string>
    <string name="test">Test</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send_number">Send number</string>
    <string name="phone_number">Phone number</string>
    <string name="clean_cash_frag">clean cash</string>
</resources>