<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="kg.geekteck.newsapp40.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="kg.geekteck.newsapp40.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="kg.geekteck.newsapp40.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="kg.geekteck.newsapp40.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/newsFragment"
        android:name="kg.geekteck.newsapp40.ui.news.NewsFragment"
        android:label="fragment_news"
        tools:layout="@layout/fragment_news"/>
    <fragment
        android:id="@+id/boardFragment"
        android:name="kg.geekteck.newsapp40.ui.booarding.BoardFragment"
        android:label="fragment_board"
        tools:layout="@layout/fragment_board" />
</navigation>